# tor-bandwidth-monitor

./: .env.example  .gitignore  CONTRIBUTING.md  DockerFile  LICENSE  README.md  __init__.py  check_setup.py  controller.py  docker-compose.yml  main.py  metrics.py  pyproject.toml  requirements.txt  test_installation.py  torrc  ui.py
dashboards/: tor-monitor-grafana.json
tor_monitor_pro/: __init__.py  alerts.py  anomaly.py  audit.py  check_setup.py  cli.py  config.py  controller.py  database.py  latency.py  metrics.py  plugins.py  prometheus.py
tor_monitor_pro/api/: __init__.py  auth.py  routes.py  server.py
tor_monitor_pro/ui/: __init__.py  tui.py
